--- a/polymer-testnet/package.json
+++ b/polymer-testnet/package.json
@@ -23,5 +23,17 @@
     "tailwindcss": "^3.3.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.4"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "postcss.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ale141414/polymer-testnet.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ale141414/polymer-testnet/issues"
+  },
+  "homepage": "https://github.com/ale141414/polymer-testnet#readme"
 }
